tests/miniJava/neg/004396_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public this int [] java ( ) { return 0 ; } }
